Fixed Image presentation on Mobile, exiting img presentation, resume List,

--- a/react-personal/src/components/component.module.css
+++ b/react-personal/src/components/component.module.css
@@ -79,9 +79,7 @@
 
 .resumeList {
     display: block;
-    width: 50%;
-    min-width: 100px;
-    float: left;
+    min-width: 200px;
 }
 
 img.expand_icon {
@@ -169,7 +167,7 @@ ul {
     flex-wrap: wrap;
     justify-content: center; 
     gap: 10px;
-    margin-left: -15px;
+    padding:0;
 }
 
 .imageGal > li {
@@ -179,6 +177,10 @@ ul {
     flex: 0 1 auto;
 
     list-style-type: none;
+        flex-shrink: 1;
+
+
+  overflow: scroll;
 }
 
 
@@ -240,6 +242,7 @@ ul {
     justify-content: center;
     background-color: rgba(10,10,10, 0.5);
     position: relative;
+    overflow: scroll;
 }
 
 .imageViewer img {
